homescreen done with one error same key

--- a/src/component/cateogriesbar/_categoriesBar.scss
+++ b/src/component/cateogriesbar/_categoriesBar.scss
@@ -6,6 +6,8 @@
 
     display: flex;
     overflow-x: scroll;
+    
+  
 
     &::-webkit-scrollbar{
         width: 0px;
@@ -23,6 +25,12 @@
     
 
     &:hover{
+        background-color: #606060;
+       
+    }
+
+    &.active{
+        color: #fff;
         background-color: #606060;
         border-color: $border-color;
     }
