--- a/src/component/header/_header.scss
+++ b/src/component/header/_header.scss
@@ -8,6 +8,9 @@
     background-color: $black-primary;
     height: 10vh;
     width: 100%;
+     position: fixed;
+     top: 0;
+     z-index: 999;
 
     &__menu {
         display: none;
@@ -57,16 +60,17 @@
         justify-content: space-around;
         align-items: center;
         
+        img{
+          border-radius: 50%;
+          width:45px;
+          height:40px;
+          object-fit: contain;
+          margin-left: 5px;
+  
+      }
       
     }
-    img{
-        border-radius: 50%;
-        width:45px;
-        height:40px;
-        object-fit: contain;
-        margin-left: 5px;
-
-    }
+ 
 }
 
 
