--- a/src/component/video/_videos.scss
+++ b/src/component/video/_videos.scss
@@ -14,7 +14,10 @@
         img{
             width: 100%;
         }
-        span{
+        .lazy-load-image-background{
+            width: 100%;
+        }
+        &__duration{
             position: absolute;
 
             bottom: 0.1rem;
@@ -22,8 +25,7 @@
             padding: 0.2rem;
             background: #080808ec;
             border-radius: 3px;
-
-            z-index: 99999;
+   
         }
     }
  &__title{
