--- a/src/component/videoMetaData/videometa.scss
+++ b/src/component/videoMetaData/videometa.scss
@@ -7,20 +7,24 @@
    }
     }
 
-    &__channel{
+    &__channel {
         border-top: 0.2px solid $border-color ;
         border-bottom: 0.2px solid $border-color;
-        img{
+           img{
             width: 50px;
             height: 50px;
-        }
+             }
 
-        button {
+      button {
             background-color: red;
             color: #fff;
             border-radius: 0;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+
+            &.btn-gray{
+                background-color: gray;
+            }
 
             &:hover{
                 color: rgb(238, 61, 61);
